# open-xiaoai-client

./: Cargo.toml  Makefile  README.md  readme.md
.github/workflows/: release.yml
src/: config.rs  main.rs
src/app/: capabilities.rs  commands.rs  fanout.rs  mod.rs  peer_context.rs  peer_media.rs  session.rs  session_peer.rs  supervisor.rs  ws_ingress.rs  ws_peer_hub.rs
src/audio/: config.rs  mod.rs  player.rs  recorder.rs
src/base/: debug.rs  error.rs  mod.rs  version.rs
src/monitor/: file.rs  instruction.rs  kws.rs  mod.rs  playing.rs
src/protocol/: data.rs  mod.rs  registry.rs  router.rs
src/shell/: command.rs  device.rs  lx06_audio.rs  mod.rs  speaker.rs
src/transport/: codec.rs  control.rs  mod.rs  ws_pump.rs
